Pretty giant commit:
 - Rearranged File structure and a bunch of definition locations

Created:
 - TODO file
 - Non-hostile entities
 - Map folders / Parsing Map Data
 - Player Dying / Respawning
 - A ton of other stuff I'm sure but I forgot. I'm making this changes file after I made all the changes (probably won't do that again)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,21 +2,27 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "build",
+            "type": "shell",
+            "command": "cls;cd src;make run",
+            "args": []
+        },
+        {
             "label": "make-build",
             "type": "shell",
-            "command": "cd src;make",
+            "command": "cls;cd src;make",
             "args": []
         },
         {
             "label": "make-run",
             "type": "shell",
-            "command": "cd src;make run",
+            "command": "cls;cd src;make run",
             "args": []
         },
         {
             "label": "make-clean",
             "type": "shell",
-            "command": "cd src;make clean",
+            "command": "cls;cd src;make clean",
             "args": []
         }
     ]
