Added basic files for level editor:     - No code yet, just "Hello World" program     - In order to run level editor, use "make run_editor" instead of "make run"     - Updated tasks.json for vscode and makefile for running level editor

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,12 @@
             "args": []
         },
         {
+            "label": "build_editor",
+            "type": "shell",
+            "command": "cd src;make run_editor",
+            "args": []
+        },
+        {
             "label": "make-build",
             "type": "shell",
             "command": "cd src;make",
